Media querie no container-sobre
Adionado break point em 768px flex-wrap: wrap;

--- a/css/divs2.css
+++ b/css/divs2.css
@@ -243,7 +243,12 @@ section#servicos h2{
 	margin: 30px auto;
 	align-items: center;
 	max-width: 960px;
-	flex-wrap: wrap;
+}
+
+@media screen and (max-width:768px){
+	.container-sobre{
+		flex-wrap: wrap;	
+	}
 }
 
 .container-sobre .img-turtle,
