--- a/css/divs2.css
+++ b/css/divs2.css
@@ -276,6 +276,7 @@ section#servicos h2{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+        Flex-wrap: wrap;
 }
 
 .footer span{
