--- a/css/divs2.css
+++ b/css/divs2.css
@@ -170,6 +170,7 @@ section#servicos h2{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+        Align-content: center;
 	transform: translate3d(100px, 0,0);
 	opacity: 0;
 	transition: all 500ms cubic-bezier(0.000, 1.650, 1.000, 0.925);
