--- a/css/divs2.css
+++ b/css/divs2.css
@@ -173,13 +173,13 @@ section#servicos h2{
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	flex-wrap: wrap;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
         Align-content: center;
 	-webkit-transform: translate3d(100px, 0,0);
-	        transform: translate3d(100px, 0,0);
+	transform: translate3d(100px, 0,0);
 	opacity: 0;
 	-webkit-transition: all 500ms cubic-bezier(0.000, 1.650, 1.000, 0.925);
 	-o-transition: all 500ms cubic-bezier(0.000, 1.650, 1.000, 0.925);
@@ -189,11 +189,12 @@ section#servicos h2{
 
 .services.active{
 	-webkit-transform: translate3d(0,0,0);
-	        transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
 	-webkit-transition: all 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530);
 	-o-transition: all 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530);
 	transition: all 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530);
 	opacity: 1;
+        margin: 30px auto;
 }
 
 .col{
