--- a/css/divs2.css
+++ b/css/divs2.css
@@ -195,6 +195,7 @@ section#servicos h2{
 	transition: all 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530);
 	opacity: 1;
         margin: 30px auto;
+        Align-content: center;
 }
 
 .col{
