--- a/css/divs2.css
+++ b/css/divs2.css
@@ -10,7 +10,9 @@
 	display: block;
 }
 html {
-	text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	    -ms-text-size-adjust: 100%;
+	        text-size-adjust: 100%;
 	scroll-behavior: smooth;
 }
 
@@ -29,11 +31,19 @@ header{
 
 .menu {
 	background: transparent;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	padding: 30px;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: space-evenly;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: space-evenly;
+	    -ms-flex-pack: space-evenly;
+	        justify-content: space-evenly;
+	-webkit-transition: all 500ms cubic-bezier(0.550, 0.055, 0.675, 0.190);
 	transition: all 500ms cubic-bezier(0.550, 0.055, 0.675, 0.190);
 	vertical-align: middle;
 }
@@ -44,7 +54,8 @@ header{
 	width: 100%;
 	z-index: 99999;
 	padding: 35px;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 }
 
 .caixa.active{
@@ -52,6 +63,7 @@ header{
 }
 .btn {
 	display: none;
+	-webkit-transition: all .3s;
 	transition: all .3s;
 }
 
@@ -82,20 +94,24 @@ header{
 	left: 180px;
 }
 .btn.active {
-	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	        transform: rotate(45deg);
 }
 .btn.active span::before {
-	transform: rotate(90deg);
+	-webkit-transform: rotate(90deg);
+	        transform: rotate(90deg);
 	top: 0;
 }
 .btn.active span::after {
-	transform: rotate(90deg);
+	-webkit-transform: rotate(90deg);
+	        transform: rotate(90deg);
 	bottom: 0;
 }
 
 .btn.active,
 .btn.active span::before,
 .btn.active span::after {
+	-webkit-transition: all 0.5s ease;
 	transition: all 0.5s ease;
 }
 
@@ -135,8 +151,11 @@ header{
 }
 
 .itens ul {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	list-style: none;
 	margin: 0 20px;
 }
@@ -182,7 +201,6 @@ section#servicos h2{
 	transform: translate3d(100px, 0,0);
 	opacity: 0;
 	-webkit-transition: all 500ms cubic-bezier(0.000, 1.650, 1.000, 0.925);
-	-o-transition: all 500ms cubic-bezier(0.000, 1.650, 1.000, 0.925);
 	transition: all 500ms cubic-bezier(0.000, 1.650, 1.000, 0.925);
 	margin-bottom: 120px;
 }
@@ -191,7 +209,6 @@ section#servicos h2{
 	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
 	-webkit-transition: all 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530);
-	-o-transition: all 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530);
 	transition: all 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530);
 	opacity: 1;
         margin: 30px auto;
@@ -201,22 +218,34 @@ section#servicos h2{
 .col{
 	box-shadow: 0 0 6px 0 rgba(0,0,0,0.25);
 	margin: 10px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	padding: 30px;
 	-webkit-box-flex: 1;
         -ms-flex: 1 0 230px;
         flex: 1 0 230px;
 	max-width: 300px;
 	border-radius: 10px;
+	-webkit-transition: all 700ms;
 	transition: all 700ms;
 }
 .col:hover{
 	box-shadow: 0 0 10px 0 rgba(0,0,0,0.25);
+	-webkit-transition: all 700ms;
 	transition: all 700ms;
-	transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	        transform: scale(1.1);
 }
 .col img{
 	max-width: 100%;
@@ -235,8 +264,12 @@ section#servicos h2{
 		overflow-x: hidden;
 	}
 	.services{
-		flex-direction: column;
-		align-content: center;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-ms-flex-line-pack: center;
+		    align-content: center;
 		margin: 1em auto;
 	}
 }
@@ -257,21 +290,30 @@ section#servicos h2{
 	text-align: center;
 }
 .container-sobre{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	margin: 30px auto;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	max-width: 960px;
 }
 
 @media (max-width:768px){
 	.container-sobre{
-		flex-direction: column;	
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;	
 	}
 }
 
 .container-sobre .img-turtle,
 .container-sobre .texto{
-	flex: 2 0 50%;
+	-webkit-box-flex: 2;
+	    -ms-flex: 2 0 50%;
+	        flex: 2 0 50%;
 	padding: 30px;
 }
 
@@ -291,9 +333,15 @@ section#servicos h2{
 .footer{
 	background: #0762d9;
 	padding: 30px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
         Flex-wrap: wrap;
 }
 
