--- a/css/divs2.css
+++ b/css/divs2.css
@@ -1,8 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
-        Box-sizing: border-box;
-        -webkit-Box-sizing: border-box;
+	box-sizing: border-box;
 	font-family: 'Rubik', sans-serif;
 }
 .m3{
@@ -10,9 +9,7 @@
 	display: block;
 }
 html {
-	-webkit-text-size-adjust: 100%;
-	    -ms-text-size-adjust: 100%;
-	        text-size-adjust: 100%;
+	text-size-adjust: 100%;
 	scroll-behavior: smooth;
 }
 
@@ -31,19 +28,11 @@ header{
 
 .menu {
 	background: transparent;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
 	padding: 30px;
-	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	-webkit-box-pack: space-evenly;
-	    -ms-flex-pack: space-evenly;
-	        justify-content: space-evenly;
-	-webkit-transition: all 500ms cubic-bezier(0.550, 0.055, 0.675, 0.190);
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-evenly;
 	transition: all 500ms cubic-bezier(0.550, 0.055, 0.675, 0.190);
 	vertical-align: middle;
 }
@@ -54,8 +43,7 @@ header{
 	width: 100%;
 	z-index: 99999;
 	padding: 35px;
-	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	flex-wrap: wrap;
 }
 
 .caixa.active{
@@ -63,7 +51,6 @@ header{
 }
 .btn {
 	display: none;
-	-webkit-transition: all .3s;
 	transition: all .3s;
 }
 
@@ -94,24 +81,20 @@ header{
 	left: 180px;
 }
 .btn.active {
-	-webkit-transform: rotate(45deg);
-	        transform: rotate(45deg);
+	transform: rotate(45deg);
 }
 .btn.active span::before {
-	-webkit-transform: rotate(90deg);
-	        transform: rotate(90deg);
+	transform: rotate(90deg);
 	top: 0;
 }
 .btn.active span::after {
-	-webkit-transform: rotate(90deg);
-	        transform: rotate(90deg);
+	transform: rotate(90deg);
 	bottom: 0;
 }
 
 .btn.active,
 .btn.active span::before,
 .btn.active span::after {
-	-webkit-transition: all 0.5s ease;
 	transition: all 0.5s ease;
 }
 
@@ -151,11 +134,8 @@ header{
 }
 
 .itens ul {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	flex-wrap: wrap;
 	list-style: none;
 	margin: 0 20px;
 }
@@ -184,68 +164,42 @@ section#servicos h2{
 	font-size: 32px;
 	text-align: center;
 }
-
 .services{
 	max-width: 960px;
 	margin: 30px auto;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
 	justify-content: center;
         Align-content: center;
-	-webkit-transform: translate3d(100px, 0,0);
 	transform: translate3d(100px, 0,0);
 	opacity: 0;
-	-webkit-transition: all 500ms cubic-bezier(0.000, 1.650, 1.000, 0.925);
 	transition: all 500ms cubic-bezier(0.000, 1.650, 1.000, 0.925);
 	margin-bottom: 120px;
 }
 
 .services.active{
-	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
-	-webkit-transition: all 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530);
 	transition: all 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530);
 	opacity: 1;
-        margin: 30px;
-        Align-content: center;
 }
 
 .col{
 	box-shadow: 0 0 6px 0 rgba(0,0,0,0.25);
 	margin: 10px;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	padding: 30px;
-	-webkit-box-flex: 1;
-        -ms-flex: 1 0 230px;
-        flex: 1 0 230px;
+	flex: 1 0 230px;
 	max-width: 300px;
 	border-radius: 10px;
-	-webkit-transition: all 700ms;
 	transition: all 700ms;
 }
 .col:hover{
 	box-shadow: 0 0 10px 0 rgba(0,0,0,0.25);
-	-webkit-transition: all 700ms;
 	transition: all 700ms;
-	-webkit-transform: scale(1.1);
-	        transform: scale(1.1);
+	transform: scale(1.1);
 }
 .col img{
 	max-width: 100%;
@@ -264,13 +218,11 @@ section#servicos h2{
 		overflow-x: hidden;
 	}
 	.services{
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		    -ms-flex-direction: column;
-		        flex-direction: column;
-		-ms-flex-line-pack: center;
-		    align-content: center;
-		margin: 10px;
+		flex-direction: column;
+		align-content: center;
+		margin: 1em auto;
+		justify-content: center;
+		align-items: center;
 	}
 }
 
@@ -290,30 +242,21 @@ section#servicos h2{
 	text-align: center;
 }
 .container-sobre{
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
 	margin: 30px auto;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	align-items: center;
 	max-width: 960px;
 }
 
 @media (max-width:768px){
 	.container-sobre{
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		    -ms-flex-direction: column;
-		        flex-direction: column;	
+		flex-direction: column;	
 	}
 }
 
 .container-sobre .img-turtle,
 .container-sobre .texto{
-	-webkit-box-flex: 2;
-	    -ms-flex: 2 0 50%;
-	        flex: 2 0 50%;
+	flex: 2 0 50%;
 	padding: 30px;
 }
 
@@ -333,15 +276,9 @@ section#servicos h2{
 .footer{
 	background: #0762d9;
 	padding: 30px;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	justify-content: center;
+	align-items: center;
         Flex-wrap: wrap;
 }
 
