--- a/Acme/main.css
+++ b/Acme/main.css
@@ -8,6 +8,7 @@
 }
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 body{
     font-family: 'Raleway', sans-serif;
@@ -15,14 +16,6 @@ body{
 }
 .menu{
     margin: 60px 20px;
-}
-.menu::after{
-    content: '';
-    display: block;
-    width: 75%;
-    margin: 20px auto;
-    height: 2px;
-    border-bottom: 1px solid #8d8d8d;
 }
 /*Menu mobile*/
 .menu-mobile{
@@ -42,13 +35,6 @@ body{
     opacity: 1;
     transition: all 700ms ease-in;
 }
-
-@media(min-width: 768px){
-    .menu-mobile{
-        display: none;
-    }
-}
-
 
 .links-mobile{
     margin: 20px;
@@ -94,13 +80,6 @@ body{
     flex-wrap: wrap;
     margin: 10px;
     list-style: none;
-}
-
-@media(max-width:768px){
-
-    .links ul{
-        display: none;
-    }
 }
 
 
@@ -157,8 +136,16 @@ body{
 
 
 /*Produtos*/
+#home:before{
+    content: '';
+    display: block;
+    width: 80%;
+    margin: 20px auto;
+    height: 2px;
+    border-bottom: 1px solid #8d8d8d;
+}
 .container{
-    max-width: 920px;
+    width: 80%;
     margin: 0 auto;
     padding-bottom: 20px;
 }
@@ -177,47 +164,15 @@ body{
     justify-content: center;
     align-content: center;
 }
-@media(max-width: 768px){
-    .container h2{
-        text-align: center;
-    }
-    .produtos{
-        flex-wrap: wrap;
-    }
-    .card{
-        flex: 0 0 50%;
-        margin: 20px 0;
-    }
-    .hamburg{
-        display: block;
-    }
-}
-@media(max-width: 768px){
-    .container{
-        max-width: 500px;
-    }
-    
-}
+
 .card{
     max-width: 300px;
     margin: 3px;
     border-radius: 10px;
     overflow: hidden;
     position: relative;
-}
-@media(min-width: 768px){
-    .card{
-        flex: 0 0 20%;
-    }
-}
-
-@media(min-width: 768px) and (max-width:768px){
-    .container{
-        max-width: 700px;
-    }
-    .card{
-        flex: 0 0 19%;
-    }
+    flex: 0 0 auto;
+    width: 100%;
 }
 
 .produto{
@@ -238,7 +193,7 @@ body{
 .infos{
     background: #c5d7ec;
     padding: 30px;
-    height: 120px;
+    height: 150px;
 }
 
 .infos p{
@@ -275,12 +230,7 @@ body{
     color: #4F4F4F;
     text-transform: uppercase;
 }
-@media(max-width: 960px){
-    .promocoes h2{
-        text-align: center;
-    }
-    
-}
+
 .coluna-promo{
     display: flex;
     justify-content: center;
@@ -289,18 +239,13 @@ body{
 }
 
 .promo{
-    flex: 0 0 80%;
+    flex: 0 0 auto;
+    width: 90%;
 }
 
 .prod img{
     max-width: 100%;
     height: auto;
-}
-
-@media(min-width: 768px){
-    .promo{
-        flex: 0 0 33.33333%;
-    }
 }
 
 .prod{
@@ -321,15 +266,7 @@ body{
     color: #4F4F4F;
     text-transform: uppercase;
 }
-@media(max-width: 960px){
-    .sobre h2{
-        text-align: center;
-    }
-    .texto-sobre{
-        width: 80%;
-    }
-    
-}
+
 .texto-sobre{
     background: #F0F4F8;
     border-radius: 15px;
@@ -362,22 +299,6 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-}
-@media(min-width: 768px){
-    .card-loja{
-        flex: 0 0 33.33333%;
-    }
-    .card-loja.meio{
-        margin-top: -30px;
-    }
-}
-@media(max-width: 960px){
-    .lojas h2{
-        text-align: center;
-    }
-    .card-loja{
-        flex: 0 0 80%;
-    }
 }
 .infos-loja{
     background: #F0F4F8;
