--- a/Acme/responsivo.css
+++ b/Acme/responsivo.css
@@ -145,7 +145,7 @@ body{
     border-bottom: 1px solid #8d8d8d;
 }
 .container{
-    width: 80%;
+    max-width: 80%;
     margin: 0 auto;
     padding-bottom: 20px;
 }
